# dupla

./: .env.dev  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  MANIFEST.in  Makefile  README.md  dev-requirements.txt  pyproject.toml  requirements.txt
.github/workflows/: test.yml
dupla/: __init__.py  abstract_payload.py  api_keys.py  base.py  custom_types.py  dupla.py  endpoint.py  exceptions.py  payload.py  retry.py  timestamp.py  validation.py  version.py
scripts/: README.md  agreements.yml.dist  env.dist  requirements.txt  run_endpoints.py
tests/: conftest.py  test_api.py  test_authenticate_onbehalfofse.py  test_backoff.py  test_dupla.py  test_dupla_pydantic.py  test_payload.py  test_verification.py
