[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "dupla"
version = "0.0.1"
authors = [
  { name="Valentin Rosenberg Larsen", email="valentin.rosenberg@gmail.com" },
]
description = "A python API for making requests to DUPLA (Dataudvekslingsplatformen)"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dependencies = [
  "requests",
  "requests_pkcs12",
]

[project.optional-dependencies]
test = [
  "pytest",
  "pytest-mock",
]