[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "dupla"
authors = [
  {name="Valentin Rosenberg Larsen", email="valentin.rosenberg@gmail.com"},
  {name="Alexander Tygesen", email="atygesen@hotmail.com"},
]
description = "A python API for making requests to DUPLA (Dataudvekslingsplatformen)"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "Apache License 2.0"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dependencies = [
  "requests",
  "requests_pkcs12",
  "python-dotenv",
  "pyyaml",
  "backoff",
  "packaging",  # For version parsing
]
dynamic = ["version"]

[tool.setuptools.dynamic]
version = {file = "dupla/_version.txt"}

[project.optional-dependencies]
test = [
  "pytest",
  "pytest-mock",
]
dev = [
  "pytest",
  "pytest-mock",
  "black==23.7.0",
  "ruff==0.0.278",
  "pre-commit",
  # For publishing
  "build",
  "twine",
  "pyclean>=2.0.0",
]

[tool.black]
line-length = 100
target-version = ['py38']

[tool.ruff]
line-length = 100
exclude = ["__init__.py",
           "scripts"]
target-version = "py38"
extend-select = ["I", "RUF"]
ignore = ["RUF012"]
